// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoBG should render with absolute position 1`] = `
<div>
  <div
    class="top-0 left-0 w-full h-full -z-10 absolute"
  >
    <video
      autoplay=""
      class="bg-gradient-to-b from-purple-950 to-black object-cover w-full h-full"
      loop=""
      playsinline=""
    >
      <source
        src="test.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`VideoBG should render with fixed position 1`] = `
<div>
  <div
    class="top-0 left-0 w-full h-full -z-10 fixed"
  >
    <video
      autoplay=""
      class="bg-gradient-to-b from-purple-950 to-black object-cover w-full h-full"
      loop=""
      playsinline=""
    >
      <source
        src="test.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;
